@@ -6555,7 +6555,7 @@ Manual
 	    <class>GtkFrame</class>
 	    <name>frame65</name>
 	    <border_width>4</border_width>
-	    <label>Edit Frame</label>
+	    <label>Frame Pos.</label>
 	    <label_xalign>0</label_xalign>
 	    <shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
 	    <child>
