@@ -1,3 +1,9 @@
+2002-01-19  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mapedit/shapeedit.cc:  Shape-info editing seems to (at least
+	superficially) work.
+	* shapes/shapeinf.h:  Init. ready_type to 255 in constructor.
+
 2002-01-19  Patrick Burke  <takhisisii@yahoo.com.au>
 	* conf/*: Optimised XMLEntity::searchpairs.
 	* usecode/ucxt: Changed from using opcodes.txt to u7opcodes.data,
